@@ -1,9 +1,10 @@
 1.0 "Asieoniezi"
 
 0.132 "FIXME"
- 447680 handle nzb files whose parts are in the wrong order (Benjamin Charron)
  441859 in 0.131, 'read next unread' didn't always work (Artur Jachacy)
  444184 0.131 fails to build on RH4/CentOS4 (Steven Ellis)
+ 438021 can't post one message to multiple groups at one time (Keith)
+ 447680 handle nzb files whose parts are in the wrong order (Benjamin Charron)
  349490 better info for the tool-tip of the Tasks button (Douglas Bollinger)
 
 0.131 "Ghosts: First Variation"
